fix button on mobile

--- a/Edena/css/styles.css
+++ b/Edena/css/styles.css
@@ -253,6 +253,7 @@ footer{
     background-color: white;
     position: absolute;
     padding-left: 30px;
+
     left: 20%;
     top: 20%;
     width: 400px;
@@ -262,6 +263,7 @@ footer{
 }
 
 .advertisement-mobile{
+    padding-right:30px;
     left: 0;
     top: 0;
     position: relative;
